--- a/practice_index.html
+++ b/practice_index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Is Fun!</title>
+    <title>{{ title }} - Microblog</title>
 </head>
 <body>
-    <h1>Hello, world!</h1>
+    <h1>Hello, {{ user.username }}!</h1>
     <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet
      iaculis lorem non sollicitudin. Fusce elementum ac elit finibus auctor.
